fix button on mobile

--- a/SIRA-design42yurienik/01-prototipo-interface/05_css/01_index_tela_inicial.css
+++ b/SIRA-design42yurienik/01-prototipo-interface/05_css/01_index_tela_inicial.css
@@ -202,7 +202,7 @@ th, td {
 }
 
 .adicionar-reserva-btn {
-    margin-left: 50%;
+    margin-left: 50vw;
     transform: translateX(-50%);
 }
 }
