--- a/SIRA-design42yurienik/01-prototipo-interface/05_css/02_style.css
+++ b/SIRA-design42yurienik/01-prototipo-interface/05_css/02_style.css
@@ -202,8 +202,11 @@ tbody th {
   }
 
   .adicionar-reserva-btn {
-    margin-left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+    bottom: auto;
+
+    left: auto;
+    margin: auto;
   }
 }
 
